--- a/output.css
+++ b/output.css
@@ -368,9 +368,6 @@
       max-width: 96rem !important;
     }
   }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
-  }
   .my-3 {
     margin-block: calc(var(--spacing) * 3);
   }
@@ -747,9 +744,6 @@
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -1985,6 +1979,11 @@
   }
 }
 @layer components {
+  .skill-grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: calc(var(--spacing) * 4);
+  }
   .skill-hover {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
@@ -2009,16 +2008,15 @@
     }
   }
   .skill-div {
-    margin-block: calc(var(--spacing) * 2);
     display: flex;
-    align-items: flex-start;
+    align-items: center;
   }
   .skill-icon {
     width: calc(var(--spacing) * 6);
   }
   .skill-text {
     margin-left: calc(var(--spacing) * 2);
-    text-align: left;
+    text-align: start;
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
@@ -2138,6 +2136,19 @@
     @media (width >= 48rem) {
       scroll-margin-top: calc(var(--spacing) * 16);
     }
+  }
+  .project-div {
+    display: flex;
+    align-items: center;
+  }
+  .project-icon {
+    width: calc(var(--spacing) * 8);
+  }
+  .project-text {
+    margin-left: calc(var(--spacing) * 2);
+    text-align: start;
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
   }
   .project-title {
     display: flex;
